--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ jobs:
       run: chmod +x gradlew
     - name: Test with Gradle
       run: ./gradlew test
+    - name: Checkstyle
+      run: ./gradlew checkstyleMain
     - name: Code coverage rapost
       run: ./gradlew jacocoTestReport
     - name: Data to codecov
